trying dvh and dvw to fix viewport issue on mobile

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ iframe {
     transition: ease-in-out 1s;
 }
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     overflow: hidden;
     background-color: rgb(0, 0, 0);
     align-items: center;
